--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,10 +1,5 @@
 <h1>task new</h1>
 
-<%= form_for(@task) do |f| %>
-  <%= f.label :content, 'task' %>
-  <%= f.text_field :content %>
-
-  <%= f.submit '登録' %>
-<% end %>
+<%= render 'form', task: @task %>
 
 <%= link_to 'task list に戻る', tasks_path %>
