--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,7 +1,8 @@
 <h1>id = <%= @task.id %> のtask details</h1>
 
-<p><%= @task.content %></p>
+<p>status<%= @task.status %></p>
+<p>task<%= @task.content %></p>
 
 <%= link_to 'tasklist へ戻る', tasks_path %>
 <%= link_to 'このtaskを編集する', edit_task_path(@task) %>
-<%= link_to 'このtaskを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+<%= link_to 'このtaskを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>ta
