--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,18 @@
 <%= form_for(@task) do |f| %>
+ <% if task.errors.any? %>
+    <div id="error_explanation">
+      <ul>
+        <% task.errors.full_messages.each do |task| %>
+          <li><%= task %></li>
+        <% end %>
+      </ul>
+    </div>
+   <% end %>
+
+  <%= f.label :status, 'status' %>
+  <%= f.text_field :status %>
+
+  
   <%= f.label :content, 'task' %>
   <%= f.text_field :content %>
 
